--- a/day2_cinema/src/main/res/menu/bottom_nav_menu.xml
+++ b/day2_cinema/src/main/res/menu/bottom_nav_menu.xml
@@ -6,6 +6,11 @@
         android:icon="@drawable/ic_home_black_24dp"
         android:title="Step 1"/>
 
+    <item
+        android:id="@+id/step2"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="Step 2"/>
+
 
 
 </menu>
