--- a/day2_cinema/src/main/res/layout/fragment_step3.xml
+++ b/day2_cinema/src/main/res/layout/fragment_step3.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
  
-    <TextView
-        android:id="@+id/text_dashboard"
+    <Chronometer
+        android:id="@+id/time_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
