--- a/day2_cinema/src/main/res/menu/bottom_nav_menu.xml
+++ b/day2_cinema/src/main/res/menu/bottom_nav_menu.xml
@@ -11,6 +11,9 @@
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="Step 2"/>
 
-
+    <item
+        android:id="@+id/step3"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="Step 3"/>
 
 </menu>
