--- a/day2_cinema/src/main/res/navigation/mobile_navigation.xml
+++ b/day2_cinema/src/main/res/navigation/mobile_navigation.xml
@@ -18,4 +18,10 @@
         android:label="Step 2"
         tools:layout="@layout/fragment_step2" />
 
+    <fragment
+        android:id="@+id/step3"
+        android:name="com.andreiverdes.training.expleo.cinema.ui.step3.Step3Fragment"
+        android:label="Step 3"
+        tools:layout="@layout/fragment_step3" />
+
 </navigation>
