--- a/day2_cinema/src/main/res/menu/bottom_nav_menu.xml
+++ b/day2_cinema/src/main/res/menu/bottom_nav_menu.xml
@@ -16,4 +16,10 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="Step 3"/>
 
+    <item
+        android:id="@+id/step4"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="Step 4"/>
+
+
 </menu>
