--- a/day2_cinema/src/main/res/navigation/mobile_navigation.xml
+++ b/day2_cinema/src/main/res/navigation/mobile_navigation.xml
@@ -24,4 +24,10 @@
         android:label="Step 3"
         tools:layout="@layout/fragment_step3" />
 
+    <fragment
+    android:id="@+id/step4"
+    android:name="com.andreiverdes.training.expleo.cinema.ui.step4.Step4Fragment"
+    android:label="Step 4"
+    tools:layout="@layout/fragment_step4" />
+
 </navigation>
