--- a/day2_cinema/src/main/res/menu/bottom_nav_menu.xml
+++ b/day2_cinema/src/main/res/menu/bottom_nav_menu.xml
@@ -21,5 +21,10 @@
         android:icon="@drawable/ic_home_black_24dp"
         android:title="Step 4"/>
 
+    <item
+        android:id="@+id/step5"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="Step 5"/>
+
 
 </menu>
