Update stackoverflow app

--- a/day3_stackoverflow/src/main/res/layout/item_question.xml
+++ b/day3_stackoverflow/src/main/res/layout/item_question.xml
@@ -19,6 +19,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
+            app:userUri="@{ceVreau.photoUri}"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
