--- a/day3_stackoverflow/src/main/res/layout/item_question.xml
+++ b/day3_stackoverflow/src/main/res/layout/item_question.xml
@@ -5,21 +5,20 @@
 
     <data>
         <variable
-            name="ceVreau"
-            type="com.andreiverdes.training.expleo.stackoverflow.model.QuestionItem" />
+            name="item"
+            type="com.andreiverdes.training.expleo.stackoverflow.QuestionsAdapter.Item" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="96dp"
-        android:onClick="@{() -> ceVreau.thisWasClicked()}">
+        android:layout_height="96dp">
 
         <ImageView
             android:id="@+id/user_photo"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
-            app:userUri="@{ceVreau.photoUri}"
+            app:userUri="@{item.photoUri}"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -30,7 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@{ceVreau.questionTitle}"
+            android:text="@{item.questionTitle}"
             app:layout_constraintStart_toEndOf="@id/user_photo"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -40,7 +39,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@{ceVreau.questionDate}"
+            android:text="@{item.questionDate}"
             app:layout_constraintStart_toEndOf="@id/user_photo"
             app:layout_constraintTop_toBottomOf="@id/question_title"
             app:layout_constraintEnd_toEndOf="parent"/>
