--- a/day3_stackoverflow/src/main/res/layout/item_question.xml
+++ b/day3_stackoverflow/src/main/res/layout/item_question.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="96dp">
 
-        <ImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/user_photo"
             android:layout_width="0dp"
             android:layout_height="match_parent"
