--- a/day3_stackoverflow/src/main/res/layout/activity_main.xml
+++ b/day3_stackoverflow/src/main/res/layout/activity_main.xml
@@ -15,7 +15,19 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:items="@{viewModel.itemsListLiveData}"/>
+            android:layout_height="0dp"
+            app:items="@{viewModel.itemsListLiveData}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/filter"/>
+        <EditText
+            android:id="@+id/filter"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:text="@={viewModel.searchString}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
